# clean-architecture-with-python

./: pyproject.toml
.devcontainer/: devcontainer.json
src/frameworks_and_drivers/http_server/: aiohttp_http_server.py  fastapi_http_server.py  flask_http_server.py  test_aiohttp_http_server.py  test_fastapi_http_server.py  test_flask_http_server.py
src/interface_adapters/contracts/: http_controller.py  http_response.py  http_server.py
src/interface_adapters/controllers/: hello_world_controller.py
src/main/: bootstrap_http_server.py  http_server_factory.py
src/main/http_server/fastapi/: bootstrap_http_server.py
