[tool.poetry]
name = "clean-architecture-with-python"
version = "0.1.0"
description = "project to learn clean architecture with python"
authors = ["Douglas Silva <douglaseusilva@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
faker = "^26.0.0"
mypy = "^1.10.1"
pylint = "^3.2.5"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
